feat: implement filtering in tasks